<resources>
    <string name="app_name">OutfitMatch</string>

    <string name="deco">deco</string>
    <string name="boton">boton</string>
    <string name="fotoPerfil">foto perfil</string>
    <string name="deslizar">deslizar</string>
    <string name="img">img</string>

    <string name="welcome">Welcome!</string>
    <string name="ready">ready to create your outfit?</string>

    <string name="signup">Sign up</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Number Phone</string>

    <string name="outfits">Outfits</string>
    <string name="ideas">Ideas</string>
    <string name="articulos">Artícles</string>

    <string name="profile">Profile</string>

    <string name="swipe">Swipe and choose the outfits you like</string>

    <string name="perfil">Profile</string>

    <string name="zara">Zara</string>
    <string name="bershka">Bershka</string>
    <string name="registrarprendas">Register Clothes</string>
    <string name="gif_description" />

    <string name="talla">Size</string>
    <string name="Material">Material</string>
    <string name="Color">Colour</string>

    <string name="text">text</string>
    <string name="register_button">Don\'t have an account? Sign up!</string>

    <string-array name="tipo_prenda_array">
        <item>Shirts</item>
        <item>Pants</item>
        <item>Shoes</item>
        <item>Dresses</item>
        <item>Accessories</item>
        <item>Jackets</item>
    </string-array>

    <string name="subirprenda">Up</string>
    <string name="create_outfit">Create outfit</string>
    <string name="cerrar_sesion">Close session</string>
    <string name="pull" translatable="false" />
    <string name="lefties" translatable="false" />
    <string name="change_language" />
    <string name="hello_user">Hello user!!</string>
    <string name="ready_home">ready to create your outfit?</string>
    <string name="delete_account">Delete account</string>
    <string name="confirmar_contrasena">Confirm your password</string>
    <string name="nueva_contrasena">Enter your new password</string>
    <string name="forgot_password">¿Forgot your password?</string>


    <string name="actualizando_fotoperfil">Updating profile picture...</string>
    <string name="seguro_cerrar_sesion">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="eliminar_cuenta">Delete account</string>
    <string name="seguro_eliminar_cuenta">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="word_eliminar">Delete</string>
    <string name="word_cancelar">Cancel</string>
    <string name="añadido_favoritos">Add favourites</string>

    <string name="clima">Load weather…</string>

    <string name="todo">All</string>
    <string name="camisas">Shirts</string>
    <string name="pantalones">Pants</string>
    <string name="vestidoschaquetas">Dresses/Jackets</string>
    <string name="zapatos">Shoes</string>
    <string name="Accesorios">Accessories</string>

    <string name="nprendas">0 Clothes</string>
    <string name="cuenta_eliminada">Cuenta eliminada</string>
    <string name="error_eliminar_cuenta">Error al eliminar cuenta</string>

    <string name="genereteoutfit">Generete Outfit</string>

    <string name="createoutfits">Create your outfit</string>
    <string name="twopice">Two-piece outfit</string>
    <string name="dressoutfit">Dress outfit</string>
    <string name="saveoutfit">Save outfit</string>
    <string name="favorite">Favorites</string>

    <string name="language">Language</string>
    <string name="Theme">Theme</string>

    <string name="stores">Stores</string>
    <string name="album">Album</string>
    <string name="leftis">Lefties</string>
    <string name="pullbear">PullBear</string>

    <string name="total_items">You have %1$d clothes :)</string>




</resources>