<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Transition">


    <!-- CardStackView (Para el Swipe) -->


    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/swipe"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/cardStackView"
        android:layout_width="250dp"
        android:layout_height="325dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/deslizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/botonLike"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/nav_icon_tint"
        android:contentDescription="@string/boton"
        app:icon="@drawable/corazon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <Button
        android:id="@+id/botonX"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/orangedark"
        android:contentDescription="@string/boton"
        app:icon="@drawable/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />


    <Button
        android:id="@+id/botonfavorito"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/nav_background"
        android:textColor="@color/nav_icon_tint"
        android:contentDescription="@string/boton"
        android:fontFamily="@font/autour_one"
        android:text="@string/favorite"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonGenerarOutfits"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/nav_background"
        android:textColor="@color/nav_icon_tint"
        android:contentDescription="@string/boton"
        android:fontFamily="@font/autour_one"
        android:text="@string/genereteoutfit"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/botonfavorito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cornerRadius="10sp"
        app:backgroundColor="?attr/backgroundColor"
        app:textColor="@color/nav_text"
        app:indicatorRadius="10sp"
        app:iconTint="@color/nav_icon_tint"
        app:iconTintActive="@color/nav_icon_active"
        app:indicatorColor="@color/nav_indicator"
        android:contentDescription="@string/deco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />




</androidx.constraintlayout.widget.ConstraintLayout>