<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pareja_start"
    tools:ignore="ExtraText">

    <!-- Imagen decorativa izquierda -->

    <!-- Imagen decorativa derecha -->

    <!-- Texto de bienvenida -->

    <!-- Subtítulo debajo de bienvenida -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/ready"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <!-- Botón para iniciar sesión -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="292dp"
        android:layout_height="64dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/graydark2"
        android:fontFamily="@font/autour_one"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText" />

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="292dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orangedark"
        android:fontFamily="@font/autour_one"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
